# modak_data_challenge

./: README.md  pyproject.toml
project_code/: report.html  report.ipynb
