[tool.poetry]
name = "data-challenge-modak"
version = "0.1.0"
description = ""
authors = ["João Pedro M. Miguel <joao-pedro-02@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.4"
ipykernel = "^6.29.5"
plotly = "^5.24.1"
chart-studio = "^1.1.0"
numpy = "^2.2.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
